[package]
name = "sbf-tools"
version = "0.3.0"
edition = "2021"
description = "Septentrio Binary Format (SBF) parser library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Burrdi/sbf-tools"
keywords = ["gnss", "sbf", "septentrio", "gps", "parser"]
categories = ["parsing", "embedded", "science"]

[lib]
name = "sbf_tools"

[dependencies]
thiserror = "1.0"

[dev-dependencies]

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
